# llvm-project

clang/include/clang/Basic/: Attr.td  AttrDocs.td  CodeGenOptions.def
clang/include/clang/Driver/: Options.td  Phases.h  Types.def  Types.h
clang/include/clang/Frontend/: FrontendActions.h  FrontendOptions.h
clang/lib/CodeGen/: BackendUtil.cpp  CGObjCMac.cpp
clang/lib/Driver/: Driver.cpp  Types.cpp
clang/lib/Driver/ToolChains/: Clang.cpp  InterfaceStubs.cpp  InterfaceStubs.h
clang/lib/Frontend/: CMakeLists.txt  CompilerInvocation.cpp  FrontendActions.cpp  InterfaceStubFunctionsConsumer.cpp
clang/lib/FrontendTool/: ExecuteCompilerInvocation.cpp
clang/lib/Sema/: SemaDeclAttr.cpp
clang/test/CodeGenObjC/: selector_unnamed.m
clang/test/CodeGenObjC/Inputs/: UnnamedSelectorMap.json
clang/test/IFSO/: foo-inline.h  foo.cpp
clang/tools/: CMakeLists.txt
clang/tools/clang-ifso/: CMakeLists.txt  ElfIfsoWriter.h  IfsoFormatFactory.h  Symbols2Yaml.cpp  YamlPrintManager.cpp  clang-ifso.cpp  yaml2elf.cpp
llvm/include/llvm/: InitializePasses.h
llvm/include/llvm/CodeGen/: MachineOutliner.h  MachineOutlinerGlobal.h  MachineOutlinerState.h  MachineStableHash.h  StableHashTree.h  TargetInstrInfo.h
llvm/lib/CodeGen/: CMakeLists.txt  MIRCanonicalizerPass.cpp  MachineOutliner.cpp  MachineOutlinerGlobal.cpp  MachineStableHash.cpp  StableHashTree.cpp
llvm/lib/LTO/: ThinLTOCodeGenerator.cpp
llvm/lib/Passes/: PassBuilder.cpp  PassRegistry.def
llvm/tools/llvm-ifs/: llvm-ifs.cpp
llvm/unittests/CodeGen/: CMakeLists.txt  StableHashTreeTest.cpp
(+34 files in other folders)
